--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
   }
   
   body {
-    background-color: #0a1f44;
+    background: linear-gradient(to bottom, #00aaff, #87ceeb);
+
+    /* background-color: #177a8b; */
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -123,18 +125,20 @@
     font-weight: 700;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
     margin: 0;
-    background: linear-gradient(135deg, #ffffff, #a3a3a3);
+    background: linear-gradient(135deg, #00c6ff, #0072ff);
     -webkit-background-clip: text; 
     background-clip: text;        
     -webkit-text-fill-color: transparent;
     color: #000; 
+    -webkit-text-stroke: 0.5px #000; 
+ 
   }
   
   .weather h2 {
     font-size: 45px;
     font-weight: 500;
     margin-top: -10px;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
     letter-spacing: 1px;
     color: #f0f0f0;
   }
@@ -201,7 +205,7 @@
   }
   
   .error {
-    background: rgba(255, 59, 59, 0.2);
+    background: rgba(255, 9, 9, 0.526);
     color: #fff;
     padding: 15px;
     border-radius: 15px;
